added the ability to create armor
