# docs/swagger.json
@@ -4,6 +4,29 @@
         "contact": {}
     },
     "paths": {
+        "/armor": {
+            "post": {
+                "tags": [
+                    "armor"
+                ],
+                "parameters": [
+                    {
+                        "description": "броня",
+                        "name": "armor",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entities.ArmorDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
+        },
         "/weapons": {
             "get": {
                 "tags": [
@@ -146,6 +169,20 @@
                     "items": {
                         "$ref": "#/definitions/entities.Weapon"
                     }
+                }
+            }
+        },
+        "entities.ArmorDTO": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "protection": {
+                    "type": "number"
+                },
+                "weight": {
+                    "type": "number"
                 }
             }
         },
